--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agar.io</title>
+    <title>Nigger.io</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="canv"></div>
     <div class="start">
-        <input id="" type="text" placeholder="Логин">
+        <input id="login_input" type="text" placeholder="Логин">
         <button id="start_game">Поехали, блин</button>
     </div>
+    <script src="socket.io-client-4.4.1/dist/socket.io.js"></script>
     <script src="phaser.js"></script>
     <script src="main.js"></script>
 </body>
