--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="canv"></div>
+    <div id="canv">
+        <div id="empty"></div>
+    </div>
     <div class="start">
         <input id="login_input" type="text" placeholder="Логин">
         <button id="start_game">Поехали, блин</button>
+    </div>
+    <div class="chat">
+        <div class="messages"></div>
+        <div class="controls">
+            <input id="chat_input" type="text" placeholder="Напишите сообщение">
+            <button id="send_message">Отправить</button>
+        </div>
     </div>
     <script src="socket.io-client-4.4.1/dist/socket.io.js"></script>
     <script src="phaser.js"></script>
