--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="canv">
-        <div id="empty"></div>
-    </div>
+    <canvas width="600" height="600" id="canv"></canvas>
     <div class="start">
         <input id="login_input" type="text" placeholder="Логин">
         <button id="start_game">Поехали, блин</button>
@@ -23,7 +21,6 @@
         </div>
     </div>
     <script src="socket.io-client-4.4.1/dist/socket.io.js"></script>
-    <script src="phaser.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
